profilelist1exp/unpackaged/objects/S_P_Vendor_Automation_Exception__c.object
<CustomObject>
    <description>This custom object will hold records for automation exceptions</description>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name_Value__c</fullName>
        <label>Field Name Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_P_Vendor_Automation_ID__c</fullName>
        <label>S&amp;P Vendor Automation ID</label>
        <referenceTo>S_P_Vendor_Automation__c</referenceTo>
        <relationshipLabel>S&amp;P Vendor Automation Exceptions</relationshipLabel>
        <relationshipName>S_P_Vendor_Automation_Exceptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>S&amp;P Vendor Automation Exception</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SVE #{000000000}</displayFormat>
        <label>S&amp;P Vendor Automation Exception ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S&amp;P Vendor Automation Exceptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>